Argocd/grpc-service/Argocd-Rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: checkoutservice
spec:
  replicas: 2

  selector:
    matchLabels:
      app: checkoutservice

  template:
    metadata:
      labels:
        app: checkoutservice
    spec:
      serviceAccountName: adservice
      terminationGracePeriodSeconds: 5
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: checkoutservice
        image: checkoutservice:1.0.0
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          privileged: false
          readOnlyRootFilesystem: true
        ports:
        - containerPort: 5050

        readinessProbe:
            grpc:
              port: 5050
        livenessProbe:
            grpc:
              port: 5050
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
        
      

  strategy:
    canary:
      trafficRouting:
        istio:
          virtualService:
            name: checkoutservice-vr # Trỏ đúng tên VirtualService đã tạo ở trên
            routes:
            - primary-route # Khớp với tên "name: primary-route" trong VirtualService
          destinationRule:
            name: checkoutservice-dr # Trỏ đúng tên DestinationRule đã tạo ở trên
            canarySubsetName: canary # Tên của subset nhận bản cập nhật mới
            stableSubsetName: stable # Tên của subset giữ bản chạy ổn định
      # Các bước tăng % Traffic dần dần (Canary Steps)s
      steps:
      - setWeight: 10
      - pause: {duration: 60s}

      - setWeight: 30
      - pause: {duration: 60s}

      - setWeight: 50
      - pause: {duration: 60s}

      - setWeight: 70
      - pause: {duration: 60s}

      - setWeight: 90
      - pause: {duration: 2m}

      - setWeight: 100

      analysis:
        templates:
        - templateName: checkoutservice-success-rate
        args:
        - name: service-name
          value: checkoutservice
